# OpenDesk

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
aplicativo/: .env.example  README.md  TESTING.md  index.html  package.json  tsconfig.json  vite.config.ts
aplicativo/host-daemon/: tsconfig.json
aplicativo/host-daemon/src/: capturePreview.ts  index.ts
aplicativo/src/: App.module.css  App.tsx  index.css  main.tsx
aplicativo/src-tauri/: Cargo.toml  tauri.conf.json
aplicativo/src-tauri/capabilities/: default.json
aplicativo/src-tauri/icons/: icon.icns
aplicativo/src-tauri/src/: lan_input.rs  main.rs  udp_lan.rs
aplicativo/src/components/: Header.module.css  Header.tsx  HostDaemonManager.tsx  HostLanInputPanel.module.css  HostLanInputPanel.tsx  LanNativePlayer.module.css  LanNativePlayer.tsx  RequireAuth.module.css  RequireAuth.tsx  Toast.module.css  (+3 more)
backend/: .env.example  README.md  eslint.config.js  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: bootstrapEnv.ts  config.ts  instance.ts  server.ts
client/: README.md  package.json
docs/streaming-mvp/: README.md
host/: .env.example  README.md  package.json
host/src/: host-heartbeat-mock.ts
scripts/: dev-desktop.mjs
scripts/windows/: opendesk-firewall.ps1  sunshine-firewall.ps1
web/: README.md  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.module.css  page.tsx  providers.tsx
web/components/: AppHeader.module.css  AppHeader.tsx  ProtectedRoute.tsx
web/lib/: api.ts  auth.tsx  session.ts
(+120 files in other folders)
