[package]
name = "opendesk-desktop"
version = "0.1.0"
description = "OpenDesk Desktop"
authors = ["OpenDesk"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"

[features]
custom-protocol = ["tauri/custom-protocol"]
